--- a/home.html
+++ b/home.html
@@ -211,7 +211,9 @@
           <img src="https://salt.tkbcdn.com/ts/ds/c6/fd/e1/ffaa102e8b270450205cf3646228b641.png" alt="Sự kiện lớn 1">
         </div>
         <div class="hl-item hl-big">
+          <a href="detail1.html" target="_blank">
           <img src="https://www.ticketgo.vn/uploads/images/event-logo/event_logo-ce928253bda87f1378291dcc3260880d.jpg" alt="Sự kiện lớn 2">
+          </a>
         </div>
       </div>
       <div class="hl-row hl-row-small">
