--- a/detail1.html
+++ b/detail1.html
@@ -163,7 +163,41 @@
   </div>
 </section>
 
-<!-- GIỚI THIỆU SỰ KIỆN -->
+<!-- GIỚI THIỆU VỀ SỰ KIỆN - GIAO DIỆN 1 CỘT, ĐÃ SỬA LỖI LỆCH PHẢI -->
+<section class="event-details-singlecol">
+  <div class="container-block">
+    <h2 class="event-details-heading">GIỚI THIỆU VỀ SỰ KIỆN</h2>
+
+    <div class="soldout-text-bold">
+      * THÔNG BÁO: SOLD-OUT TOÀN BỘ VÉ CHƯƠNG TRÌNH. XIN CHÂN THÀNH CẢM ƠN QUÝ KHÁN GIẢ ĐÃ ỦNG HỘ & YÊU THÍCH SHOW!
+    </div>
+    <hr class="soldout-separator" />
+
+    <div class="event-description">
+      <h3>THÔNG TIN CHI TIẾT VỀ LIVE CONCERT CỦA NHẠC SĨ DƯƠNG THỤ:</h3>
+      <p><strong>** Tên sự kiện:</strong> "CỬA SỔ ÂM NHẠC NO.5 – BÀI HÁT THU VỀ"</p>
+      <p><strong>1. Thời gian:</strong> 20h00 thứ Ba, ngày 04/11/2025</p>
+      <p><strong>2. Địa điểm:</strong> Nhà hát Hồ Gươm – TP. Hà Nội, số 40, phố Hàng Bài, phường Hoàn Kiếm, thành phố Hà Nội</p>
+      <p><strong>3. Ca sĩ trình bày:</strong> Thanh Lam - Hồng Nhung - Bằng Kiều - Tấn Minh - Khánh Linh - Vũ Thắng Lợi - Đào Tố Loan - Orange (Cam) - Trần Nguyễn Minh Đức,...</p>
+
+      <p><strong>4. Bảng giá vé live-concert Dương Thụ: Cửa sổ âm nhạc No.5 – Bài hát thu về</strong></p>
+      <ul class="ticket-pricing">
+        <li>🔸 Hạng S.VIP (vàng gold): 6,500,000 VNĐ</li>
+        <li>🔸 Hạng VIP (đỏ): 5,500,000 VNĐ</li>
+        <li>🔸 Hạng 1 (tím): 4,500,000 VNĐ</li>
+        <li>🔸 Hạng 2 (cam): 3,500,000 VNĐ</li>
+        <li>🔸 Hạng 3 (xanh lá): 2,500,000 VNĐ</li>
+        <li>🔸 Hạng 4 (xanh dương): 2,000,000 VNĐ</li>
+        <li>🔸 Hạng 5 (hồng): 1,500,000 VNĐ</li>
+      </ul>
+
+      <p class="hotline-support">
+        <strong>Hotline hỗ trợ mua vé:</strong> <span class="hotline-number">08.999.80.818 - 0243.788.00.99</span>
+      </p>
+    </div>
+  </div>
+</section>
+
 
 <!-- HEADER DANH MỤC CHỈ GỒM TIÊU ĐỀ + XEM THÊM -->
 <section class="category-head">
