--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
 
       <!-- Actions (desktop) -->
       <nav class="actions" aria-label="Tài khoản & ngôn ngữ">
-        <a class="link" href="login.html" target="_blank">Đăng nhập</a>
-        <a class="link" href="sign up.html" target="_blank">Đăng ký</a>
+        <a class="link" href="dangnhap.html" target="_blank">Đăng nhập</a>
+        <a class="link" href="dangnhap.html" target="_blank">Đăng ký</a>
 
         <!-- Language -->
         <div class="lang">
