--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
 
       <!-- Actions (desktop) -->
       <nav class="actions" aria-label="Tài khoản & ngôn ngữ">
-        <a class="link" href="dangnhap.html" target="_blank">Đăng nhập</a>
-        <a class="link" href="dangnhap.html" target="_blank">Đăng ký</a>
+        <a class="link" href="login.html" target="_blank">Đăng nhập</a>
+        <a class="link" href="sign up.html" target="_blank">Đăng ký</a>
 
         <!-- Language -->
         <div class="lang">
@@ -211,9 +211,7 @@
           <img src="https://salt.tkbcdn.com/ts/ds/c6/fd/e1/ffaa102e8b270450205cf3646228b641.png" alt="Sự kiện lớn 1">
         </div>
         <div class="hl-item hl-big">
-          <a href="detail1.html" target="_blank">
           <img src="https://www.ticketgo.vn/uploads/images/event-logo/event_logo-ce928253bda87f1378291dcc3260880d.jpg" alt="Sự kiện lớn 2">
-          </a>
         </div>
       </div>
       <div class="hl-row hl-row-small">
