--- a/sport.html
+++ b/sport.html
@@ -12,7 +12,7 @@
   <header class="site-header">
   <div class="container header-wrap">
     <!-- Logo -->
-    <a href="#" class="logo" aria-label="TicketGo">
+    <a href="home.html" class="logo" aria-label="TicketGo">
       <div>
         <div class="logo__wordmark">
           <span class="ticket">Ticket</span><span class="go">Go</span>
@@ -82,14 +82,14 @@
   <nav class="main-nav" aria-label="Danh mục">
     <div class="container main-nav__inner">
       <ul class="menu">
-        <li><a href="#">Vé ca nhạc</a></li>
-        <li><a href="#">Văn hóa nghệ thuật</a></li>
-        <li><a href="#">Du lịch</a></li>
-        <li><a href="#">Workshop</a></li>
-        <li><a href="#">Vé xem phim</a></li>
-        <li><a href="#">Vé tham quan</a></li>
-        <li><a href="#">Thể thao</a></li>
-        <li><a href="#">Tin tức</a></li>
+        <li><a href="concert tickets.html">Vé ca nhạc</a></li>
+        <li><a href="art culture.html">Văn hóa nghệ thuật</a></li>
+        <li><a href="travel.html">Du lịch</a></li>
+        <li><a href="workshop.html">Workshop</a></li>
+        <li><a href="movie ticket.html">Vé xem phim</a></li>
+        <li><a href="tour ticket.html">Vé tham quan</a></li>
+        <li><a href="sport.html">Thể thao</a></li>
+        <li><a href="news.html">Tin tức</a></li>
       </ul>
 
       <div class="location">
